Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3419,7 +3419,6 @@ input, select, textarea {
 		}
 
 /* Skills Section */
-
 #skills {
     max-width: 900px;
     margin: 50px auto;
@@ -3427,6 +3426,7 @@ input, select, textarea {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+	border-top: solid 2px #efefef;
 }
 
 .skill-category {
